[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://res/holygades_background.jpg" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0313726, 0.254902, 0.0235294, 1 )
shadow_color = Color( 0.0509804, 0.184314, 0.0196078, 0.6 )
shadow_size = 50

[sub_resource type="DynamicFontData" id=2]
font_path = "res://res/BalsamiqSans-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://res/BalsamiqSans-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://res/BalsamiqSans-Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = SubResource( 6 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 247.0
margin_top = 98.0
margin_right = 756.0
margin_bottom = 482.0
custom_constants/separation = 60

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.0352941, 0.505882, 0, 1 )
margin_right = 509.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "TEMPLEJUMP
PLATFORMER GAME TUTORIALS 2D
GODOT "
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 509.0
margin_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 149.0
margin_right = 360.0
margin_bottom = 210.0
custom_constants/separation = 10

[node name="Start" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.211765, 0.862745, 0.054902, 1 )
margin_right = 211.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "START GAME"

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.345098, 0.945098, 0.101961, 1 )
margin_top = 55.0
margin_right = 211.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 7 )
text = "EXIT"

[node name="Credit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.345098, 0.945098, 0.101961, 1 )
margin_top = 110.0
margin_right = 211.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 7 )
text = "CREDIT"

[node name="Intro" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.345098, 0.945098, 0.101961, 1 )
margin_top = 165.0
margin_right = 211.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 7 )
text = "INTRO"
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Credit" to="." method="_on_Credit_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Intro" to="." method="_on_Intro_pressed"]
